--- a/JS/OpenCV/TemplateMatching/TemplateMatching.html
+++ b/JS/OpenCV/TemplateMatching/TemplateMatching.html
@@ -1,10 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="utf-8">
+    <title>Hello OpenCV.js</title>
 </head>
-<body>
-$END$
+
+<body style="width: 100%;">
+<h2>Hello OpenCV.js</h2>
+<p id="status">OpenCV.js is loading...</p>
+<div>
+    <div class="inputoutput">
+        <img id="templImageSrc" src="./contours.png" style="display: none;"/>
+        <img id="imageSrc" alt="No Image"/>
+        <div class="caption">imageSrc <input type="file" id="fileInput" name="file" /></div>
+    </div>
+    <div class="inputoutput">
+        <canvas id="canvasOutput"></canvas>
+        <div class="caption">canvasOutput</div>
+    </div>
+</div>
+<script type="text/javascript">
+    let imgElement = document.getElementById('imageSrc');
+    let inputElement = document.getElementById('fileInput');
+
+    inputElement.addEventListener('change', (e) => {
+        imgElement.src = URL.createObjectURL(e.target.files[0]);
+    }, false);
+
+    imgElement.onload = function () {
+        let src = cv.imread(imgElement);
+        let testImgElement = document.getElementById('templImageSrc');
+        let templ = cv.imread(testImgElement);
+        let dst = new cv.Mat();
+        let mask = new cv.Mat();
+        cv.matchTemplate(src, templ, dst, cv.TM_CCOEFF, mask);
+        let result = cv.minMaxLoc(dst, mask);
+        let maxPoint = result.maxLoc;
+        let rect = new cv.Rect(maxPoint.x, maxPoint.y, templ.cols, src.rows - maxPoint.y);
+        dst = src.roi(rect);
+        cv.cvtColor(dst, dst, cv.COLOR_RGBA2GRAY);
+        cv.threshold(dst, dst, 177, 200, cv.THRESH_OTSU);
+        cv.imshow('canvasOutput', dst);
+        src.delete(); dst.delete(); mask.delete();
+    };
+
+    var Module = {
+        // https://emscripten.org/docs/api_reference/module.html#Module.onRuntimeInitialized
+        onRuntimeInitialized() {
+            document.getElementById('status').innerHTML = 'OpenCV.js is ready.';
+        }
+    };
+</script>
+<script async src="opencv.js" type="text/javascript"></script>
 </body>
+
 </html>
