--- a/JS/OpenCV/TemplateMatching/index.html
+++ b/JS/OpenCV/TemplateMatching/index.html
@@ -31,7 +31,7 @@
 </div>
 <button style="width: 100pt; height: 60pt;"viewImg" onclick="clickButton()">Template Matching Result</button>
 
-
+<script async="async" src="../opencv.4.10.js" type="text/javascript"></script>
 <script type="text/javascript">
     // insert image into image canvas
 
@@ -66,7 +66,13 @@
         let dst = new cv.Mat();
         let mask = new cv.Mat();
         cv.matchTemplate(src, templ, dst, cv.TM_CCOEFF, mask);
+        // cv.matchTemplate(src, templ, dst, cv.TM_CCOEFF);
         let result = cv.minMaxLoc(dst, mask);
+
+        console.log(result);
+        console.log(mask);
+        console.log(dst)
+
         let maxPoint = result.maxLoc;
         let color = new cv.Scalar(255, 0, 0, 255);
         let point = new cv.Point(maxPoint.x + templ.cols, maxPoint.y + templ.rows);
@@ -87,6 +93,5 @@
         }
     };
 </script>
-<script async="async" src="opencv.js" type="text/javascript"></script>
 </body>
 </html>
